[tool.poetry]
name = "lisp_parser"
version = "0.1.0"
description = ""
authors = ["Josh Morrow <josh@jcmorrow.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
expecter = "^0.3.0"
flake8 = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
